Fixed contribution spacing and constricting with smaller screen size. Fixed drop down menu background colours.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -10,32 +10,6 @@
     padding: 0;
 }
 
-.outer_app_container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-}
-
-.inner_app_box {
-    background: transparent;
-    border-radius: 10px;
-    padding: 20px;
-    color: #d4bfff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 16px;
-    min-width: 400px;
-}
-
-.display_box {
-    max-width: 425px;
-    display: inline-block;
-}
-
-@media (max-width: 70em) {
-    .input_wrapper_1 { order: 2; }
-    .input_wrapper_2 { order: 1; }
-    .input_wrapper_3 { order: 3; }
+.css-1rb8ayf-MuiStack-root > :not(style) ~ :not(style) {
+    margin-top: 0;
 }
